fixes flex and spacing of book cards

--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ body {
 
 #container {
     display: flex;
+    gap: 15px;
+    width: 100%;
+    flex-wrap: wrap;
 }
 
 .subtext {
